Initial data cleaning

--- a/DataCheckpointGroup_060-Wi23.ipynb
+++ b/DataCheckpointGroup_060-Wi23.ipynb
@@ -8,16 +8,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Alan Miyazaki\n",
+    "- Alex Guan\n",
+    "- Nathan Ahmann\n",
+    "- Renaldy Herlim"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "import pandas as pd"
    ]
   },
   {
@@ -90,13 +90,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "# Reading datasets from two different time periods\n",
+    "\n",
+    "# https://data.lacity.org/Public-Safety/Crime-Data-from-2010-to-2019/63jg-8b9z\n",
+    "past_df = pd.read_csv(\"Crime_Data_from_2010_to_2019.csv\")\n",
+    "# https://data.lacity.org/Public-Safety/Crime-Data-from-2020-to-Present/2nrs-mtv8\n",
+    "present_df = pd.read_csv(\"Crime_Data_from_2020_to_Present.csv\")\n",
+    "\n",
+    "# past dataset has column name typo\n",
+    "past_df = past_df.rename(columns={\"AREA \": \"AREA\"})\n",
+    "\n",
+    "# Both datasets use the same columns \n",
+    "df = pd.concat([past_df, present_df])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping code columns since these are internal use and we don't get much \n",
+    "# value from them given we have their description in a seperate column\n",
+    "df = df.drop(columns=[\n",
+    "    \"Crm Cd\", \"Crm Cd 1\", \"Crm Cd 2\", \"Crm Cd 3\", \n",
+    "    \"Crm Cd 4\", \"Premis Cd\", \"Weapon Used Cd\"\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"https://data.lacity.org/resource/2nrs-mtv8.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -115,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
