Added initial Proposal info

--- a/ProjectProposalGroup_060-Wi23.ipynb
+++ b/ProjectProposalGroup_060-Wi23.ipynb
@@ -8,16 +8,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Names\n",
-    "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Alan Miyazaki\n",
+    "- Alex Guan\n",
+    "- Nathan Ahmann\n",
+    "- Renaldy Herlim"
    ]
   },
   {
@@ -28,14 +27,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-  Include a specific, clear data science question.\n",
-    "-  Make sure what you're measuring (variables) to answer the question is clear\n",
-    "\n",
-    "What is your research question? Include the specific question you're setting out to answer. This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences)\n",
-    "\n"
+    "Does crime happen more or less frequently around police stations and can that knowledge be used to more effectively distribute police station locations?"
    ]
   },
   {
@@ -77,15 +73,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "- Include your team's hypothesis\n",
-    "- Ensure that this hypothesis is clear to readers\n",
-    "- Explain why you think this will be the outcome (what was your thinking?)\n",
-    "\n",
-    "What is your main hypothesis/predictions about what the answer to your question is? Briefly explain your thinking. (2-3 sentences)"
+    "We believe that less crime will happen closer to police stations which would imply that the presence of a police station deters crime. If criminal activity happens less around police stations then it would be important to effectively spread out police stations in order to minimize crime rate as a whole."
    ]
   },
   {
@@ -96,11 +89,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Explain what the **ideal** dataset you would want to answer this question. (This should include: What variables? How many observations? Who/what/how would these data be collected? How would these data be stored/organized?)\n",
-    "1. Search for potential **real** datasets that could provide you with something useful for this project.  You do not have to find every piece of data you will use, but you do need to have demonstrated some idea that (a) this data is gettable and (b) that this data may be different from what your ideal is"
+    "We would need at least 2 datasets in order to answer our question. One of the datasets would simply be a list of police stations. We would need to know the location of each station and ideally would have a very precise measurement for the location so that we can accurately determine distances using it.\n",
+    "\n",
+    "The other dataset would consist of crime data. Most importantly it would contain the location information of the crime, again, as precise as possible for calculations. Additionally, it would be nice to have information on what police station had jurisdiction over the crime so we could see if it matches up with any distance calculation. Lastly, we could do further analysis if the crime data contained information about the type of crime or other details that could be used for more in-depth analysis.\n",
+    "\n",
+    "Both of these datasets are feasible to find. Many cities post crime data and often include some form of location for the crime, whether it be district or nearby street intersection. Additionally, information of police station locations is public and can be found on GPS services even if an explicity dataset does not exist for a city."
    ]
   },
   {
@@ -128,6 +125,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### not sure where this should go but worth mentioning\n",
+    "\n",
+    "One potential problem/bias in the dataset is that it will only include criminal activity of reported crimes. This means that by default the crimes had to be caught and would likely be close to police stations in order for them to respond. Areas not covered well by police stations would likely allow some crimes to slip under the radar. Since our question directly compares crimes close and far from police stations this could prove problematic and go against our hypothesis."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,16 +142,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our team plans to use Discord as our primary means of communication. \n",
     "\n",
-    "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
-    "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "We expect people to:\n",
+    "* Respond in a timely manner (??? hours/days)\n",
+    "* Complete tasks asked of them or communicate issues before the last minute\n",
+    "* Ask for help if they need it"
    ]
   },
   {
@@ -155,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,8 +174,21 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "| 3/5  |  ?? PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| After 3/15 ideally  |  ? |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "  \n",
+    "Notes:   \n",
+    "Prof said checkpoint 2 due in minimum 1 week https://piazza.com/class/lcntjbzyslj233/post/348   \n",
+    "Final project due date is ???  \n",
+    "Our capstone project deadlines are:   \n",
+    "    poster thurs 3/9  \n",
+    "    code/report 3/14  \n",
+    "    showcase 3/15  \n",
+    "So after 3/15 I expect to be much more free  \n",
+    "  \n",
+    "  \n",
+    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
+    "|---|---|---|---|\n",
     "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
     "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
     "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
