Filled out dataset information

--- a/DataCheckpointGroup_060-Wi23.ipynb
+++ b/DataCheckpointGroup_060-Wi23.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "source": [
     "# Names\n",
-    "\n",
     "- Alan Miyazaki\n",
     "- Alex Guan\n",
     "- Nathan Ahmann\n",
@@ -29,10 +28,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "Does crime happen more or less frequently around police stations and can that knowledge be used to more effectively distribute police station locations?"
    ]
   },
   {
@@ -43,19 +43,66 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your dataset information here*\n",
+    "### Dataset 1: Los Angeles Police Station Location\n",
+    "[Link to dataset](https://geohub.lacity.org/datasets/lapd-police-stations)  \n",
+    "Number of observations: 21\n",
     "\n",
-    "(Copy this information for each dataset)\n",
-    "- Dataset Name:\n",
-    "- Link to the dataset:\n",
-    "- Number of observations:\n",
+    "This dataset contains information on all 21 of LA City's Police Stations. If we find that our crime data extends past the city or want a more precise location, then we might make use of the extended data for LA county that includes more Police Stations and additioanlly includes Sheriff stations.\n",
     "\n",
-    "1-2 sentences describing each dataset. \n",
+    "Each row of the dataset contains information for one police station.  \n",
+    "The relevant columns are:\n",
+    "* DIVISION - the division the police station is under\n",
+    "* LOCATION - an address for the police station. Since we would rather have a more precise location we might convert these to latitude/longitude or use the alternative dataset.\n",
+    "* PREC - the precinct each station is in charge of \n",
     "\n",
-    "If you plan to use multiple datasets, add 1-2 sentences about how you plan to combine these datasets."
+    "\n",
+    "#### Alternate Dataset that is for the entire LA county and includes Sheriff Stations:  \n",
+    "[Link to alternate dataset](https://geohub.lacity.org/datasets/lacounty::sheriff-and-police-stations)  \n",
+    "Number of observations: 105\n",
+    "\n",
+    "This dataset contains information on 105 of LA County's Police and Sheriff Stations. It contains more data than the above dataset, but some of the information might not be necessary so we listed it as an alternative.\n",
+    "\n",
+    "Each row of the dataset contains information for one police or sheriff station.  \n",
+    "The relevant columns are:\n",
+    "* cat3 - Category 3 has a distinction between sheriff and police stations\n",
+    "* latitude, longitude - self explanatory\n",
+    "* addrln1 - address line 1 contains an address we could use for locaiton instead of latitude, longitude\n",
+    "* city - Contains the city so we could narrow it down to LA city\n",
+    "\n",
+    "\n",
+    "### Dataset 2: Los Angeles Crime Data from 2020 to Present (March 1st 2023)  \n",
+    "[Link to dataset](https://data.lacity.org/Public-Safety/Crime-Data-from-2020-to-Present/2nrs-mtv8) \n",
+    "  \n",
+    "Number of observations: 673,367 \n",
+    "\n",
+    "This dataset includes information on crimes that took place in Los Angeles between 2020 and March 1st 2023.\n",
+    "Since Dataset 2 and 3 have the same columns, the row information and relevant column is below.\n",
+    "\n",
+    "### Dataset 3: Los Angeles Crime Data from 2010 to 2019\n",
+    "[Link to dataset](https://data.lacity.org/Public-Safety/Crime-Data-from-2010-to-2019/63jg-8b9z)\n",
+    "  \n",
+    "Number of observations: 2,119,797 \n",
+    "\n",
+    "This dataset includes information on crimes that took place in Los Angeles between 2010 and 2019.  \n",
+    "\n",
+    "Each row represents a single crime that took place.\n",
+    "The relevant columns are:\n",
+    "* DR_NO - Divisions of Records number. Acts as an unique ID for the crime\n",
+    "* DATE_OCC - The date that the crime occured\n",
+    "* AREA - contains the geographic area code for the police station. These are 1-21 and correspond to 1 of the 21 police stations.\n",
+    "* Crm Cd Desc - description of the criminal code. Essentially a human readable crime category\n",
+    "* LOCATION - street address the crime took place at\n",
+    "* LAT, LONG - latitude and longitude\n",
+    "\n",
+    "### Combining the Datasets\n",
+    "\n",
+    "Dataset 1 will be our police station information so it will stay as it's own dataset. In our analysis we will use it in conjunction with the other datasets via location data, which will likely be latitude/longitude.\n",
+    "\n",
+    "Dataset 2 and 3 contain our crime data. Due to coming from the same source, they are quite easy to combine and contain the same columns so we can simply concatenate them together."
    ]
   },
   {
@@ -67,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,22 +168,6 @@
     "    \"Crm Cd 4\", \"Premis Cd\", \"Weapon Used Cd\"\n",
     "    ])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"https://data.lacity.org/resource/2nrs-mtv8.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -155,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
