Added Project Timeline

--- a/ProjectProposalGroup_060-Wi23.ipynb
+++ b/ProjectProposalGroup_060-Wi23.ipynb
@@ -148,8 +148,8 @@
    "source": [
     "Our team plans to use Discord as our primary means of communication. \n",
     "\n",
-    "We expect people to:\n",
-    "* Respond in a timely manner (??? hours/days)\n",
+    "We expect everyone to:\n",
+    "* Respond in a timely manner (24 hours)\n",
     "* Complete tasks asked of them or communicate issues before the last minute\n",
     "* Ask for help if they need it"
    ]
@@ -166,42 +166,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specify your team's specific project timeline. An example timeline has been provided. Changes the dates, times, names, and details to fit your group's plan.\n",
-    "\n",
-    "If you think you will need any special resources or training outside what we have covered in COGS 108 to solve your problem, then your proposal should state these clearly. For example, if you have selected a problem that involves implementing multiple neural networks, please state this so we can make sure you know what you’re doing and so we can point you to resources you will need to implement your project. Note that you are not required to use outside methods.\n",
-    "\n",
-    "\n",
-    "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 3/5  |  ?? PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| After 3/15 ideally  |  ? |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "  \n",
-    "Notes:   \n",
-    "Prof said checkpoint 2 due in minimum 1 week https://piazza.com/class/lcntjbzyslj233/post/348   \n",
-    "Final project due date is ???  \n",
-    "Our capstone project deadlines are:   \n",
-    "    poster thurs 3/9  \n",
-    "    code/report 3/14  \n",
-    "    showcase 3/15  \n",
-    "So after 3/15 I expect to be much more free  \n",
-    "  \n",
-    "  \n",
-    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "|---|---|---|---|\n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 3/5/2023   |  6 PM | Figure out datasets and research questions  | Checkpoint and Project Proposal | \n",
+    "| 3/13/2023  |  6 PM | Check deadlines and requirements for Checkpoint 2 | Check-in on progress for Checkpoint 2 | \n",
+    "| 3/18/2023  |  6 PM | Check deadlines and requirements for the Final Project | Check-in on progress for the Final Project |    \n",
+    "| 3/23/2023  |  6 PM | Finish and Clean up Project and Reports | Discuss about the Final Project code and report <br />  Record the 3-5 minute project video for submission | Discuss about the Final Project code and report Record the 3-5 minute video for submission |   \n",
+    "| 3/24/2023  |  6 PM | Finish everything left | Turn in the Final Project if not yet turned in |   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
