More work on data cleaning
- Added data cleaning description
- more cleaning for crime dataset

--- a/DataCheckpointGroup_060-Wi23.ipynb
+++ b/DataCheckpointGroup_060-Wi23.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +129,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Describe your data cleaning steps here."
+    "Since the two crime datasets were from the same organization (LAPD), the two sets were really easy to combine. The only change that needed to be done was that the dataset from 2010-2019 had a space in name for Area while the dataset for 2020-present did not. Aside from this, all other columns were the same and the datasets were easily combined. \n",
+    "\n",
+    "The crime dataset had quite a few columns that were unnecessary to us. Mainly these were columns containing codes that law enforcement used internally. However, these columns usually had a description column in the dataset so the code column was unnecessary for us. The only exception were Mocodes and Part 1-2 which are internally used codes but did not contain an associated description column. However after looking into what these code meant, it was decided that they did not provide any use to us and were removed. In addition to this, we also removed Date Rptd, date crime was reported, since we only care about when the crime occured and not when it was reported. We also replaced the codes in Vict Descent with their actual descriptions that was provided in the site the dataset came from. \n",
+    "\n",
+    "The dataset on LAPD police station used an X,Y system for their location. This was changed to Longitude and Latitude since that was what the crime dataset used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +153,8 @@
     "# https://data.lacity.org/Public-Safety/Crime-Data-from-2020-to-Present/2nrs-mtv8\n",
     "present_df = pd.read_csv(\"Crime_Data_from_2020_to_Present.csv\")\n",
     "\n",
+    "LAPD_df = pd.read_csv(\"LAPD_Police_Stations.csv\")\n",
+    "\n",
     "# past dataset has column name typo\n",
     "past_df = past_df.rename(columns={\"AREA \": \"AREA\"})\n",
     "\n",
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +172,38 @@
     "# value from them given we have their description in a seperate column\n",
     "df = df.drop(columns=[\n",
     "    \"Crm Cd\", \"Crm Cd 1\", \"Crm Cd 2\", \"Crm Cd 3\", \n",
-    "    \"Crm Cd 4\", \"Premis Cd\", \"Weapon Used Cd\"\n",
-    "    ])"
+    "    \"Crm Cd 4\", \"Premis Cd\", \"Weapon Used Cd\", \n",
+    "    \"Mocodes\", \"Part 1-2\", \"Status\", \"Date Rptd\"\n",
+    "    ])\n",
+    "\n",
+    "# Changed code to be readable description\n",
+    "df[\"Vict Descent\"] = df[\"Vict Descent\"].replace({\n",
+    "                            \"A\": \"Other Asian\", \n",
+    "                            \"B\": \"Black\", \n",
+    "                            \"C\": \"Chinese\", \n",
+    "                            \"D\": \"Cambodian\", \n",
+    "                            \"F\": \"Filipino\", \n",
+    "                            \"G\": \"Guamanian\", \n",
+    "                            \"H\": \"Hispanic/Latin/Mexican\", \n",
+    "                            \"I\": \"American Indian/Alaskan Native\", \n",
+    "                            \"J\": \"Japanese\", \n",
+    "                            \"K\": \"Korean\", \n",
+    "                            \"L\": \"Laotian\", \n",
+    "                            \"O\": \"Other\", \n",
+    "                            \"P\": \"Pacific Islander\", \n",
+    "                            \"S\": \"Samoan\", \n",
+    "                            \"U\": \"Hawaiian\", \n",
+    "                            \"V\": \"Vietnamese\", \n",
+    "                            \"W\": \"White\", \n",
+    "                            \"X\": \"Unknown\", \n",
+    "                            \"Z\": \"Asian Indian\",\n",
+    "                        })\n",
+    "\n",
+    "# Renamed X,Y to Longitude, Latitude\n",
+    "LAPD_df = LAPD_df.rename(columns={\n",
+    "    \"X\": \"Longitude\", \n",
+    "    \"Y\": \"Latitude\"\n",
+    "    })"
    ]
   }
  ],
@@ -186,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
