--- a/ProjectProposalGroup_060-Wi23.ipynb
+++ b/ProjectProposalGroup_060-Wi23.ipynb
@@ -111,17 +111,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Thoughtful discussion of ethical concerns included\n",
-    "- Ethical concerns consider the whole data science process (question asked, data collected, data being used, the bias in data, analysis, post-analysis, etc.)\n",
-    "- How your group handled bias/ethical concerns clearly described\n",
-    "\n",
-    "Acknowledge and address any ethics & privacy related issues of your question(s), proposed dataset(s), and/or analyses. Use the information provided in lecture to guide your group discussion and thinking. If you need further guidance, check out [Deon's Ethics Checklist](http://deon.drivendata.org/#data-science-ethics-checklist). In particular:\n",
-    "\n",
-    "- Are there any biases/privacy/terms of use issues with the data you propsed?\n",
-    "- Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)\n",
-    "- How will you set out to detect these specific biases before, during, and after/when communicating your analysis?\n",
-    "- Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
-    "- How will you handle issues you identified?"
+    "One potential problem/bias in the dataset is that it will only include criminal activity of reported crimes. This means that by default the crimes had to be caught and would likely be close to police stations in order for them to respond. Areas not covered well by police stations would likely allow some crimes to slip under the radar. \n"
+    "Since our question directly compares crimes close and far from police stations this could prove problematic and go against our hypothesis. We will handle this issue by being careful in our wording to not be misleading to readers, as well as provide visualizations that presents this bias/problem clearly to readers.\n"
+    "Another potential bias in our dataset is that since it is only covering the area of Los Angeles, it might not be representative of crime in general for the rest of the state/nation, furthermore, our data could also have an imbalanced proportion of populations due to the nature of policing and crime, in particular, the overpolicing of low income and minority areas could skew our analyses results and present problematic solutions.\n" 
+    "To tackle this problem, we will carefully analyze for these patterns in our dataset and point them out if/when they arise, as well as preface our solutions with a warning.\n"
+    "Privacy should be well protected because the records do not include the names of the victim or culprit. The only thing that links the crime to the people involved is the Division of Records Number serving as an ID of each crime. However only the Los Angeles Police Department has access to the records. In addition to this, the Los Angeles Police Department specified in the description that they round the addresses to the nearest hundred blocks to protect privacy."
    ]
   },
   {
