Added to background, edited ethics, made background footnotes
Alan wrote the first 2 paragraphs for background info on Google docs. I added the next one and converted the whole thing to markdown with corresponding footnotes

--- a/DataCheckpointGroup_060-Wi23.ipynb
+++ b/DataCheckpointGroup_060-Wi23.ipynb
@@ -133,11 +133,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the two crime datasets were from the same organization (LAPD), the two sets were really easy to combine. The only change that needed to be done was that the dataset from 2010-2019 had a space in name for Area while the dataset for 2020-present did not. Aside from this, all other columns were the same and the datasets were easily combined. \n",
+    "Since the two crime datasets were from the same organization (LAPD), the two sets were really easy to combine. The only change that needed to be done was that the dataset from 2010-2019 had a space in column name for Area while the dataset for 2020-present did not. Aside from this, all other columns were the same and the datasets were easily combined. \n",
     "\n",
     "The crime dataset had quite a few columns that were unnecessary to us. Mainly these were columns containing codes that law enforcement used internally. However, these columns usually had a description column in the dataset so the code column was unnecessary for us. The only exception were Mocodes and Part 1-2 which are internally used codes but did not contain an associated description column. However after looking into what these code meant, it was decided that they did not provide any use to us and were removed. In addition to this, we also removed Date Rptd, date crime was reported, since we only care about when the crime occured and not when it was reported. We also replaced the codes in Vict Descent with their actual descriptions that was provided in the site the dataset came from. \n",
     "\n",
-    "The dataset on LAPD police station used an X,Y system for their location. This was changed to Longitude and Latitude since that was what the crime dataset used."
+    "The dataset on LAPD police station used an X,Y system for their location. This was changed to Longitude and Latitude since that was what the crime dataset used. This dataset was left separately since we will only combine it for analysis purposes using location data later and believe the 2 dataframes should be kept separate due to storing different data."
    ]
   },
   {
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
