--- a/EDACheckpointGroup_060-Wi23.ipynb
+++ b/EDACheckpointGroup_060-Wi23.ipynb
@@ -8,16 +8,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Names\n",
-    "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Alan Miyazaki\n",
+    "- Alex Guan\n",
+    "- Nathan Ahmann\n",
+    "- Renaldy Herlim"
    ]
   },
   {
@@ -29,10 +28,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "Does crime happen more or less frequently around police stations and can that knowledge be used to more effectively distribute police station locations?"
    ]
   },
   {
