added EDA on time variables and demographics

--- a/EDACheckpointGroup_060-Wi23.ipynb
+++ b/EDACheckpointGroup_060-Wi23.ipynb
@@ -182,12 +182,138 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also want to know what types of crimes are being commmitted, because of the varying types of crimes we want to group on some key words to further understand it in simple terms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Crm Cd Desc\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(df[\"Crm Cd Desc\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analyze some common types of crimes\n",
+    "\n",
+    "df['CRIME_TYPE_GROUP'] = df['Crm Cd Desc'].apply(lambda x: 'Petty' if 'PETTY' in x \n",
+    "                                        else ('Child' if 'CHILD' in x \n",
+    "                                        else ('Sexual' if 'SEX' in x \n",
+    "                                        else ('Battery' if 'BATTERY' in x \n",
+    "                                        else ('Assault' if 'ASSAULT' in x \n",
+    "                                        else 'Other')))))\n",
+    "\n",
+    "df['CRIME_TYPE_GROUP'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze the demographic of victims to get a better understanding of our data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analyze Victim AGE\n",
+    "df_age = df[df['Vict Age'] > 0 ]['Vict Age']\n",
+    "\n",
+    "plt.bar(df_age.value_counts().index, df_age.value_counts().values)\n",
+    "\n",
+    "# Add labels and a title\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Counts of Crime Victims by Age')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are more Male victims than Female victims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vict_d = df['Vict Descent']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.bar(df_vict_d.value_counts().index, df_vict_d.value_counts().values)\n",
+    "\n",
+    "# Add labels and a title\n",
+    "plt.xlabel('Victim Race')\n",
+    "plt.xticks(rotation = 90)\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Counts of Crime Victims by Race')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analyze Victim SEX\n",
+    "df_vict_s = df[(df['Vict Sex'] == 'M')| (df['Vict Sex'] == 'F')]['Vict Sex']\n",
+    "\n",
+    "plt.bar(df_vict_s.value_counts().index, df_vict_s.value_counts().values)\n",
+    "\n",
+    "# Add labels and a title\n",
+    "plt.xlabel('Victim Sex')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Counts of Crime Victims by Sex')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of Crime Time Occurances"
    ]
   },
   {
@@ -226,6 +352,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group times into \"morning\" , \"afternoon\", \"evening\", and \"night\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"TIME OCC\"].str[:2].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a dictionary to map the times to time of day categories\n",
+    "time_dict = {'Morning': range(5, 12),\n",
+    "             'Afternoon': range(12, 18),\n",
+    "             'Evening': range(18, 24),\n",
+    "             'Night': range(0,5)}\n",
+    "\n",
+    "# Use the pandas map function to create a new column with the time of day categories\n",
+    "df['TIME_OCC_GROUP'] = df[\"TIME OCC\"].str[:2].astype(int).map(lambda x: next((k for k, v in time_dict.items() if int(x) in v), None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a barplot using matplotlib\n",
+    "plt.bar(df['TIME_OCC_GROUP'].value_counts().index, df['TIME_OCC_GROUP'].value_counts().values)\n",
+    "\n",
+    "# Add labels and a title\n",
+    "plt.xlabel('Time of Day')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Counts of Crime by Time of Day')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -250,6 +426,17 @@
    "outputs": [],
    "source": [
     "pd.to_datetime(df[\"DATE OCC\"]).value_counts().sort_index().plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sex = df[(df['Vict Sex'] == 'M')| (df['Vict Sex'] == 'F')]\n",
+    "df_sex = pd.DataFrame(df_sex.groupby(['Vict Sex', 'TIME_OCC_GROUP']).count()['TIME OCC'])\n",
+    "df_sex"
    ]
   },
   {
@@ -302,6 +489,40 @@
    "outputs": [],
    "source": [
     "pd.to_datetime(df[\"DATE OCC\"]).dt.to_period('M').value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In which month of the year is crime typically higher?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "months = pd.to_datetime(df[\"DATE OCC\"]).dt.month\n",
+    "\n",
+    "# Create a barplot using matplotlib\n",
+    "plt.bar(months.value_counts().index, months.value_counts().values)\n",
+    "\n",
+    "# Add labels and a title\n",
+    "plt.xlabel('Month')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Counts of Crime by Month')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like crime is pretty much equally spread out throughout the year, except for January."
    ]
   },
   {
