--- a/FinalProjectGroup_060-Wi23-renaldy.ipynb
+++ b/FinalProjectGroup_060-Wi23-renaldy.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - Final Project (change this to your project's title)"
+    "# Geospatial Analysis of Crimes and Police Stations in Los Angeles"
    ]
   },
   {
@@ -31,9 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our project aims to shine light on the issues of crime rate in Los Angeles county and explores its relationship with the locations of police stations. By utilizing the data of crime records collected by the LA Police Department from 2010-present combined with current locations of LAPD police stations, we attempted a geographic data analysis and discovered trends in crime types and the locations associated with it. We found that [signficant founding from geopandas EDA here]\n",
+    "Our project aims to shine light on the issues of crime rate in Los Angeles county and explores its relationship with the locations of police stations. By utilizing the data of crime records collected by the LA Police Department from 2010-present combined with current locations of LAPD police stations, we attempted a geographic data analysis and discovered trends in crime types and the locations associated with it. We found that only a small percentage of crime happens near police stations, and that most crimes are out of reach from current stations. \n",
     "\n",
-    "Furthermore, we performed clustering algorithms that propose alternative/new locations for police stations around the county to more effectively distribute station locations. [Talk about kmeans not being able to evenly distribute crime to stations?] Through this we conclude that [TBD]"
+    "Furthermore, we performed clustering algorithms that propose alternative/new locations for police stations around the county to more effectively distribute station locations. Our solutions showed that there are positive impacts that could be made such as more evenly spreading out certain types of crime among police stations. Through this we conclude that [TBD]"
    ]
   },
   {
